	* integration of parse_header_links corrected
	* changed letsencrypt certs dataset from list to dict
	* if openssl set in ini+env:
		raise an exception
	* updated `getcreate__CertificateCA__by_pem_text` to now track "is_trusted_root"
	  This should be redone with an association table that tracks which trusted root
	  stores a given certificate is in; however this is good for now
	+ other fixes and improvements
	
	AUDIT:
	* certificate_ca_download - Is this needed anymore? We now bundle the LetsEncrypt certificates.
	
	TODO:
	* debugtoolbar error on duplicate acmeaccount registration
	* list how many loops/process are needed on an acme order
	* shortcut to creating an order from a domain
			

0.4.0
- 2020/08/06
- Added routes for auditing certificate procurement
    `/acme-order/{ID}/audit`
    `/acme-order/{ID}/audit.json`
- tests for PrivateKey cycling
- renamed form fields for clarity:
    - "private_key_cycle" -> "account_key__private_key_cycle"
    - "contact" -> "account__contact"
- added "resolved" AcmeChallenge search
- added "processing" AcmeChallenge search
- updated config validation on:
    `queue_domains_min_per_cert`
    `queue_domains_max_per_cert`
- removed "returned" exception objects, which were a terrible idea
- updated (json.dumps) to use `sort_keys=True` as needed
- (queue-domains/process(.json)?) working and tested
- `acme-order/new/automated` is now `acme-order/new/freeform`
- slight reorganization of queue-certificates listing and logic
- creating queue-certificates/structured largely done
- consolidated domain blacklist checks to a new `validate` file
- split AcmeAccountKey into AcmeAccount+AcmeAccountKey to support key cycling/rollover (in the future)
    - "account_key__private_key_cycle" -> "account__private_key_cycle"
    AcmeOrder:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    ServerCertificate:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account