@@ -34,8 +34,10 @@ class ViewAdminMain(Handler):
 
     @view_config(route_name="admin", renderer="/admin/index.mako")
     def index(self):
+        self._load_AcmeAccount_GlobalDefault()
         return {
             "project": "peter_sslers",
+            "AcmeAccount_GlobalDefault": self.dbAcmeAccount_GlobalDefault,
             "enable_redis": self.request.registry.settings["app_settings"][
                 "enable_redis"
             ],
